fixed ui overflow

--- a/src/main/resources/static/css/login-page.css
+++ b/src/main/resources/static/css/login-page.css
@@ -1,5 +1,5 @@
 .main-container {
-    min-height: calc(100vh - 100px);
+    min-height: calc(100vh - 103px);
     display: flex;
     flex-direction: column;
     justify-content: center;
